Fix the spacing around settings sidebar headings

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -717,7 +717,7 @@
     left: 0;
     color: @gray;
     .flex(1 0 1px);
-    
+
     h5 {
       color: @black;
     }
@@ -795,7 +795,8 @@
     }
 
     &.aside-heading {
-      padding-top: 1em;
+      padding-top: 2em;
+      padding-bottom: 1em;
       font-weight: bold;
       color: @gray;
       background: @white;
